@@ -14,17 +14,19 @@ Config.setLocalOveride("General", "ReportPartialConversion", "No")
 
 
 tests = []
-
-tests.extend([
-        "Dim A, B, C, D, E, F",
-        "Dim A ,B As Collection",
-        "Dim B As String, B As Long, B As Integer, B As String, B As String",
-        "Dim variable As Object.OtherObj, B, C, D, E",
-        "Dim Var As Variant",
-        "Dim A, B, C As New Collection",
-        "Dim E As New Collection, F As New Object, F, G",
-        "Dim H As New Object, G As New Object",
-])
+# Continuation within a with
+tests.append('''
+With A
+  If LenB(contntMD5) <> 0 Then _
+   .setRequestHeader "Content-MD5", contntMD5
+End With
+''')
+# Continuation with
+tests.append("""
+With MyObject _
+    .Other
+End With
+""")
 
 class ParsingTest(unittest.TestCase):
     """Holder class which gets built into a whole test case"""
