@@ -4,6 +4,7 @@
 - Fixed parsing error if a **label named "Loop<someting>"** was present in a Do .. Loop
 - Added detection for **Decimal** floats
 - Fixed parsing error when Dim statement had spaces before "," (eg **Dim A , B**)
+- Fixed parsing issue with **line continuation with a With** and the With variable was the first item on a line
 
 **0.4.0.4**
 
